--- a/forest.html
+++ b/forest.html
@@ -14,14 +14,21 @@
       box-sizing: border-box;
     }
 
-    body {
-      margin: 0;
-      padding: 0;
-      background: url('https://static.vecteezy.com/system/resources/previews/006/897/039/non_2x/summer-deep-forest-landscape-in-cartoon-style-free-vector.jpg') no-repeat center center fixed;
-      background-size: cover;
+    body, html {
+      height: 100%;
+      font-family: 'Open Dyslexic', sans-serif;
       color: #2e7d32;
       text-align: center;
-      font-family: 'Open Dyslexic', sans-serif;
+    }
+
+    .video-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
     }
 
     h1 {
@@ -69,21 +76,24 @@
       margin-bottom: 10px;
     }
 
-    .card-content p {
-      font-size: 1rem;
-      color: #555;
-    }
-
-    .button-container {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 60px;
+    .button-wrapper {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 25px;
       width: 90%;
       max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-      flex-wrap: wrap;
+      margin: 60px auto 0;
+    }
+
+    .btn-lg {
+      font-size: 1.6rem;
+      padding: 18px 30px;
+      border-radius: 15px;
+      transition: transform 0.3s ease;
+    }
+
+    .btn-lg:hover {
+      transform: scale(1.05);
     }
 
     @media (max-width: 600px) {
@@ -94,44 +104,57 @@
       .card-content h3 {
         font-size: 1.3rem;
       }
-
-      .card-content p {
-        font-size: 0.9rem;
-      }
     }
   </style>
 </head>
 <body>
 
+  <video class="video-bg" autoplay muted loop playsinline>
+    <source src="Untitled design.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
   <h1>FOREST ADVENTURE</h1>
 
   <div class="container" style="margin-top: 80px;">
     <div class="card">
-      <img src="https://i.ytimg.com/vi/3l3QgKx61gY/hqdefault.jpg" alt="Fruit cutting game">
+      <img src="https://static.vecteezy.com/system/resources/previews/000/688/136/original/delicious-fruits-cartoons-vector.jpg" alt="Fruit cutting game">
       <div class="card-content">
-        <h3>Fruit cutting with letters</h3>
-        <p>Interactive games and activities make learning fun and easy!</p>
+        <h3>Pop the Word</h3>
       </div>
     </div>
   </div>
 
-  <!-- Start and Exit buttons -->
-  <div class="button-container">
-    <button class="btn btn-success btn-lg px-4 py-2" onclick="startGame()">Start</button>
-    <button class="btn btn-danger btn-lg px-4 py-2" onclick="exitGame()">Exit</button>
+  <!-- Button sounds -->
+  <audio id="click-sound" src="/mnt/data/af3c4906-0a84-4ce2-87b7-b5e850761004.mp3"></audio>
+  <audio id="exit-sound" src="/mnt/data/8f3cc2af-6e71-427d-aaea-449e82b20693.mp3"></audio>
+
+  <!-- Start and Exit buttons styled like grid items -->
+  <div class="button-wrapper">
+    <button class="btn btn-success btn-lg" onclick="startGame()">Start</button>
+    <button class="btn btn-danger btn-lg" onclick="exitGame()">Exit</button>
   </div>
 
   <script>
+    const clickSound = document.getElementById('click-sound');
+    const exitSound = document.getElementById('exit-sound');
+
     function startGame() {
-      alert("Game is starting!");
-      // Redirect or trigger game logic here
+      clickSound.play();
+      setTimeout(() => {
+        alert("Game is starting!");
+        window.location.href = "ForestGame.html"; // uncomment when game page is ready
+      }, 200);
     }
 
     function exitGame() {
-      const confirmExit = confirm("Are you sure you want to exit?");
-      if (confirmExit) {
-        window.close(); // Might not work in all browsers unless opened by script
-      }
+      exitSound.play();
+      setTimeout(() => {
+        const confirmExit = confirm("Are you sure you want to exit?");
+        if (confirmExit) {
+          window.location.href="view.html"; // May not work in all browsers
+        }
+      }, 200);
     }
   </script>
 </body>
